--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/core": "^0.3.39",
+    "@langchain/openai": "^0.4.3",
     "@mlc-ai/web-llm": "^0.2.78",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -53,6 +54,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "langchain": "^0.3.15",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
